Assign6/asgn6_21CS10005_21CS30031.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


State 341 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | LITERAL
    3                   | constant
    4                   | PARANTHESIS_OPEN expression PARANTHESIS_CLOSE

    5 constant: CONSTANT_INT
    6         | CONSTANT_FLOAT
    7         | CONSTANT_CHAR

    8 postfix_expression: primary_expression
    9                   | postfix_expression SQ_BRACKET_OPEN expression SQ_BRACKET_CLOSE
   10                   | postfix_expression PARANTHESIS_OPEN PARANTHESIS_CLOSE
   11                   | postfix_expression PARANTHESIS_OPEN argument_expression_list PARANTHESIS_CLOSE
   12                   | postfix_expression PERIOD IDENTIFIER
   13                   | postfix_expression ARROW IDENTIFIER
   14                   | postfix_expression INCREMENT
   15                   | postfix_expression DECREMENT
   16                   | PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   17                   | PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE

   26 unary_operator: AMPERSAND
   27               | ASTERISK
   28               | PLUS
   29               | MINUS
   30               | TILDE
   31               | EXCLAMATION

   32 cast_expression: unary_expression
   33                | PARANTHESIS_OPEN type_name PARANTHESIS_CLOSE cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression ASTERISK cast_expression
   36                          | multiplicative_expression SLASH cast_expression
   37                          | multiplicative_expression PERCENT cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_THAN_EQUAL shift_expression
   48                      | relational_expression GREATER_THAN_EQUAL shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUAL relational_expression
   51                    | equality_expression NOT_EQUAL relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression AMPERSAND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression CARET AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression PIPE exclusive_OR_expression

   58 logical_AND_expression: inclusive_OR_expression
   59                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   60 logical_OR_expression: logical_AND_expression
   61                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   62 conditional_expression: logical_OR_expression
   63                       | logical_OR_expression N QUESTION M expression N COLON M conditional_expression

   64 M: ε

   65 N: ε

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: ASSIGN_t
   69                    | MULTIPLY_ASSIGN
   70                    | DIVIDE_ASSIGN
   71                    | MOD_ASSIGN
   72                    | PLUS_ASSIGN
   73                    | MINUS_ASSIGN
   74                    | LEFT_SHIFT_ASSIGN
   75                    | RIGHT_SHIFT_ASSIGN
   76                    | AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | OR_ASSIGN

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list SEMICOLON
   83            | declaration_specifiers SEMICOLON

   84 declaration_specifiers: storage_class_specifier declaration_specifiers
   85                       | storage_class_specifier
   86                       | type_specifier declaration_specifiers
   87                       | type_specifier
   88                       | type_qualifier declaration_specifiers
   89                       | type_qualifier
   90                       | function_specifier declaration_specifiers
   91                       | function_specifier

   92 init_declarator_list: init_declarator_list COMMA init_declarator
   93                     | init_declarator

   94 init_declarator: declarator
   95                | declarator ASSIGN_t initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID_t
  101               | CHAR_t
  102               | SHORT
  103               | INT_t
  104               | LONG
  105               | FLOAT_t
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | BOOL_t
  110               | COMPLEX
  111               | IMAGINARY
  112               | enum_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  114                         | type_qualifier specifier_qualifier_list_opt

  115 specifier_qualifier_list_opt: specifier_qualifier_list
  116                             | ε

  117 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  118               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  119               | ENUM IDENTIFIER

  120 identifier_opt: IDENTIFIER
  121               | ε

  122 enumerator_list: enumerator
  123                | enumerator_list COMMA enumerator

  124 enumerator: IDENTIFIER
  125           | IDENTIFIER ASSIGN_t constant_expression

  126 type_qualifier: CONST
  127               | RESTRICT
  128               | VOLATILE

  129 function_specifier: INLINE

  130 declarator: pointer direct_declarator
  131           | direct_declarator

  132 direct_declarator: IDENTIFIER
  133                  | PARANTHESIS_OPEN declarator PARANTHESIS_CLOSE
  134                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list_opt SQ_BRACKET_CLOSE
  135                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list_opt assignment_expression SQ_BRACKET_CLOSE
  136                  | direct_declarator SQ_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQ_BRACKET_CLOSE
  137                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQ_BRACKET_CLOSE
  138                  | direct_declarator SQ_BRACKET_OPEN type_qualifier_list_opt ASTERISK SQ_BRACKET_CLOSE
  139                  | direct_declarator PARANTHESIS_OPEN parameter_type_list_opt PARANTHESIS_CLOSE
  140                  | direct_declarator PARANTHESIS_OPEN identifier_list PARANTHESIS_CLOSE

  141 parameter_type_list_opt: parameter_type_list
  142                        | ε

  143 type_qualifier_list_opt: type_qualifier_list
  144                        | ε

  145 pointer: ASTERISK type_qualifier_list
  146        | ASTERISK
  147        | ASTERISK type_qualifier_list pointer
  148        | ASTERISK pointer

  149 type_qualifier_list: type_qualifier
  150                    | type_qualifier_list type_qualifier

  151 parameter_type_list: parameter_list
  152                    | parameter_list COMMA ELLIPSIS

  153 parameter_list: parameter_declaration
  154               | parameter_list COMMA parameter_declaration

  155 parameter_declaration: declaration_specifiers declarator
  156                      | declaration_specifiers

  157 identifier_list: IDENTIFIER
  158                | identifier_list COMMA IDENTIFIER

  159 type_name: specifier_qualifier_list

  160 initializer: assignment_expression
  161            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  162            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  163 initializer_list: designation_opt initializer
  164                 | initializer_list COMMA designation_opt initializer

  165 designation_opt: designation
  166                | ε

  167 designation: designator_list ASSIGN_t

  168 designator_list: designator
  169                | designator_list designator

  170 designator: SQ_BRACKET_OPEN constant_expression SQ_BRACKET_CLOSE
  171           | PERIOD IDENTIFIER

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: IDENTIFIER COLON statement
  179                  | CASE constant_expression COLON statement
  180                  | DEFAULT COLON statement

  181 compound_statement: CURLY_BRACKET_OPEN block_item_list CURLY_BRACKET_CLOSE
  182                   | CURLY_BRACKET_OPEN CURLY_BRACKET_CLOSE

  183 block_item_list: block_item
  184                | block_item_list M block_item

  185 block_item: declaration
  186           | statement

  187 expression_statement: expression SEMICOLON
  188                     | SEMICOLON

  189 selection_statement: IF PARANTHESIS_OPEN expression N PARANTHESIS_CLOSE M statement N
  190                    | IF PARANTHESIS_OPEN expression N PARANTHESIS_CLOSE M statement N ELSE M statement N
  191                    | SWITCH PARANTHESIS_OPEN expression PARANTHESIS_CLOSE statement

  192 iteration_statement: WHILE M PARANTHESIS_OPEN expression N PARANTHESIS_CLOSE M statement
  193                    | DO M statement M WHILE PARANTHESIS_OPEN expression N PARANTHESIS_CLOSE SEMICOLON
  194                    | FOR PARANTHESIS_OPEN expression_statement M expression_statement N M expression N PARANTHESIS_CLOSE M statement

  195 jump_statement: GOTO_t IDENTIFIER SEMICOLON
  196               | CONTINUE SEMICOLON
  197               | BREAK SEMICOLON
  198               | RETURN_ SEMICOLON
  199               | RETURN_ expression SEMICOLON

  200 translation_unit: external_declaration
  201                 | translation_unit external_declaration

  202 external_declaration: function_definition
  203                     | declaration

  204 function_definition: declaration_specifiers declarator declaration_list compound_statement
  205                    | function_prototype compound_statement

  206 function_prototype: declaration_specifiers declarator

  207 declaration_list: declaration
  208                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 98
    ENUM (259) 117 118 119
    RESTRICT (260) 127
    UNSIGNED (261) 108
    BREAK (262) 197
    EXTERN (263) 96
    VOID_t (264) 100
    CASE (265) 179
    FLOAT_t (266) 105
    SHORT (267) 102
    VOLATILE (268) 128
    CHAR_t (269) 101
    FOR (270) 194
    SIGNED (271) 107
    WHILE (272) 192 193
    CONST (273) 126
    GOTO_t (274) 195
    SIZEOF (275) 24 25
    BOOL_t (276) 109
    CONTINUE (277) 196
    IF (278) 189 190
    STATIC (279) 97 136 137
    COMPLEX (280) 110
    RETURN_ (281) 198 199
    DEFAULT (282) 180
    INLINE (283) 129
    IMAGINARY (284) 111
    DO (285) 193
    INT_t (286) 103
    SWITCH (287) 191
    DOUBLE (288) 106
    LONG (289) 104
    ELSE (290) 190
    REGISTER (291) 99
    STRUCT (292)
    TYPEDEF (293)
    UNION (294)
    PARANTHESIS_OPEN (295) 4 10 11 16 17 25 33 133 139 140 189 190 191 192 193 194
    PARANTHESIS_CLOSE (296) 4 10 11 16 17 25 33 133 139 140 189 190 191 192 193 194
    SQ_BRACKET_OPEN (297) 9 134 135 136 137 138 170
    SQ_BRACKET_CLOSE (298) 9 134 135 136 137 138 170
    CURLY_BRACKET_OPEN (299) 16 17 117 118 161 162 181 182
    CURLY_BRACKET_CLOSE (300) 16 17 117 118 161 162 181 182
    PERIOD (301) 12 171
    ARROW (302) 13
    INCREMENT (303) 14 21
    DECREMENT (304) 15 22
    AMPERSAND (305) 26 53
    ASTERISK (306) 27 35 138 145 146 147 148
    PLUS (307) 28 39
    MINUS (308) 29 40
    TILDE (309) 30
    EXCLAMATION (310) 31
    SLASH (311) 36
    PERCENT (312) 37
    LEFT_SHIFT (313) 42
    RIGHT_SHIFT (314) 43
    LESS_THAN (315) 45
    GREATER_THAN (316) 46
    LESS_THAN_EQUAL (317) 47
    GREATER_THAN_EQUAL (318) 48
    EQUAL (319) 50
    NOT_EQUAL (320) 51
    CARET (321) 55
    PIPE (322) 57
    LOGICAL_AND (323) 59
    LOGICAL_OR (324) 61
    QUESTION (325) 63
    COLON (326) 63 178 179 180
    SEMICOLON (327) 82 83 187 188 193 195 196 197 198 199
    ELLIPSIS (328) 152
    ASSIGN_t (329) 68 95 125 167
    MULTIPLY_ASSIGN (330) 69
    DIVIDE_ASSIGN (331) 70
    MOD_ASSIGN (332) 71
    PLUS_ASSIGN (333) 72
    MINUS_ASSIGN (334) 73
    LEFT_SHIFT_ASSIGN (335) 74
    RIGHT_SHIFT_ASSIGN (336) 75
    AND_ASSIGN (337) 76
    XOR_ASSIGN (338) 77
    OR_ASSIGN (339) 78
    COMMA (340) 17 19 80 92 118 123 152 154 158 162 164
    HASH (341)
    IDENTIFIER <sValue> (342) 1 12 13 119 120 124 125 132 157 158 171 178 195
    CONSTANT_INT <iValue> (343) 5
    CONSTANT_FLOAT <fValue> (344) 6
    CONSTANT_CHAR <cValue> (345) 7
    LITERAL <sValue> (346) 2


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    primary_expression <expr> (93)
        on left: 1 2 3 4
        on right: 8
    constant <expr> (94)
        on left: 5 6 7
        on right: 3
    postfix_expression <expr> (95)
        on left: 8 9 10 11 12 13 14 15 16 17
        on right: 9 10 11 12 13 14 15 20
    argument_expression_list <paramList> (96)
        on left: 18 19
        on right: 11 19
    unary_expression <expr> (97)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 67
    unary_operator <cValue> (98)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression <expr> (99)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression <expr> (100)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <expr> (101)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <expr> (102)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression <expr> (103)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression <expr> (104)
        on left: 49 50 51
        on right: 50 51 52 53
    AND_expression <expr> (105)
        on left: 52 53
        on right: 53 54 55
    exclusive_OR_expression <expr> (106)
        on left: 54 55
        on right: 55 56 57
    inclusive_OR_expression <expr> (107)
        on left: 56 57
        on right: 57 58 59
    logical_AND_expression <expr> (108)
        on left: 58 59
        on right: 59 60 61
    logical_OR_expression <expr> (109)
        on left: 60 61
        on right: 61 62 63
    conditional_expression <expr> (110)
        on left: 62 63
        on right: 63 66 81
    M <expr> (111)
        on left: 64
        on right: 59 61 63 184 189 190 192 193 194
    N <expr> (112)
        on left: 65
        on right: 63 189 190 192 193 194
    assignment_expression <expr> (113)
        on left: 66 67
        on right: 18 19 67 79 80 135 136 137 160
    assignment_operator (114)
        on left: 68 69 70 71 72 73 74 75 76 77 78
        on right: 67
    expression <expr> (115)
        on left: 79 80
        on right: 4 9 63 80 187 189 190 191 192 193 194 199
    constant_expression (116)
        on left: 81
        on right: 125 170 179
    declaration (117)
        on left: 82 83
        on right: 185 203 207 208
    declaration_specifiers <types> (118)
        on left: 84 85 86 87 88 89 90 91
        on right: 82 83 84 86 88 90 155 156 204 206
    init_declarator_list <declList> (119)
        on left: 92 93
        on right: 82 92
    init_declarator <decl> (120)
        on left: 94 95
        on right: 92 93
    storage_class_specifier (121)
        on left: 96 97 98 99
        on right: 84 85
    type_specifier <types> (122)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 86 87 113
    specifier_qualifier_list (123)
        on left: 113 114
        on right: 115 159
    specifier_qualifier_list_opt (124)
        on left: 115 116
        on right: 113 114
    enum_specifier (125)
        on left: 117 118 119
        on right: 112
    identifier_opt (126)
        on left: 120 121
        on right: 117 118
    enumerator_list (127)
        on left: 122 123
        on right: 117 118 123
    enumerator (128)
        on left: 124 125
        on right: 122 123
    type_qualifier (129)
        on left: 126 127 128
        on right: 88 89 114 149 150
    function_specifier (130)
        on left: 129
        on right: 90 91
    declarator <decl> (131)
        on left: 130 131
        on right: 94 95 133 155 204 206
    direct_declarator <decl> (132)
        on left: 132 133 134 135 136 137 138 139 140
        on right: 130 131 134 135 136 137 138 139 140
    parameter_type_list_opt <paramList> (133)
        on left: 141 142
        on right: 139
    type_qualifier_list_opt (134)
        on left: 143 144
        on right: 134 135 138
    pointer <iValue> (135)
        on left: 145 146 147 148
        on right: 130 147 148
    type_qualifier_list (136)
        on left: 149 150
        on right: 136 137 143 145 147 150
    parameter_type_list <paramList> (137)
        on left: 151 152
        on right: 141
    parameter_list <paramList> (138)
        on left: 153 154
        on right: 151 152 154
    parameter_declaration <param> (139)
        on left: 155 156
        on right: 153 154
    identifier_list (140)
        on left: 157 158
        on right: 140 158
    type_name (141)
        on left: 159
        on right: 16 17 25 33
    initializer <expr> (142)
        on left: 160 161 162
        on right: 95 163 164
    initializer_list <decl> (143)
        on left: 163 164
        on right: 16 17 161 162 164
    designation_opt (144)
        on left: 165 166
        on right: 163 164
    designation (145)
        on left: 167
        on right: 165
    designator_list (146)
        on left: 168 169
        on right: 167 169
    designator (147)
        on left: 170 171
        on right: 168 169
    statement <expr> (148)
        on left: 172 173 174 175 176 177
        on right: 178 179 180 186 189 190 191 192 193 194
    labeled_statement <expr> (149)
        on left: 178 179 180
        on right: 172
    compound_statement <expr> (150)
        on left: 181 182
        on right: 173 204 205
    block_item_list <expr> (151)
        on left: 183 184
        on right: 181 184
    block_item <expr> (152)
        on left: 185 186
        on right: 183 184
    expression_statement <expr> (153)
        on left: 187 188
        on right: 174 194
    selection_statement <expr> (154)
        on left: 189 190 191
        on right: 175
    iteration_statement <expr> (155)
        on left: 192 193 194
        on right: 176
    jump_statement <expr> (156)
        on left: 195 196 197 198 199
        on right: 177
    translation_unit (157)
        on left: 200 201
        on right: 0 201
    external_declaration (158)
        on left: 202 203
        on right: 200 201
    function_definition (159)
        on left: 204 205
        on right: 202
    function_prototype <decl> (160)
        on left: 206
        on right: 205
    declaration_list (161)
        on left: 207 208
        on right: 204 208


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31
    function_prototype       go to state 32


State 1

   98 storage_class_specifier: AUTO •

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  117 enum_specifier: ENUM • identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  118               | ENUM • identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  119               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 33

    $default  reduce using rule 121 (identifier_opt)

    identifier_opt  go to state 34


State 3

  127 type_qualifier: RESTRICT •

    $default  reduce using rule 127 (type_qualifier)


State 4

  108 type_specifier: UNSIGNED •

    $default  reduce using rule 108 (type_specifier)


State 5

   96 storage_class_specifier: EXTERN •

    $default  reduce using rule 96 (storage_class_specifier)


State 6

  100 type_specifier: VOID_t •

    $default  reduce using rule 100 (type_specifier)


State 7

  105 type_specifier: FLOAT_t •

    $default  reduce using rule 105 (type_specifier)


State 8

  102 type_specifier: SHORT •

    $default  reduce using rule 102 (type_specifier)


State 9

  128 type_qualifier: VOLATILE •

    $default  reduce using rule 128 (type_qualifier)


State 10

  101 type_specifier: CHAR_t •

    $default  reduce using rule 101 (type_specifier)


State 11

  107 type_specifier: SIGNED •

    $default  reduce using rule 107 (type_specifier)


State 12

  126 type_qualifier: CONST •

    $default  reduce using rule 126 (type_qualifier)


State 13

  109 type_specifier: BOOL_t •

    $default  reduce using rule 109 (type_specifier)


State 14

   97 storage_class_specifier: STATIC •

    $default  reduce using rule 97 (storage_class_specifier)


State 15

  110 type_specifier: COMPLEX •

    $default  reduce using rule 110 (type_specifier)


State 16

  129 function_specifier: INLINE •

    $default  reduce using rule 129 (function_specifier)


State 17

  111 type_specifier: IMAGINARY •

    $default  reduce using rule 111 (type_specifier)


State 18

  103 type_specifier: INT_t •

    $default  reduce using rule 103 (type_specifier)


State 19

  106 type_specifier: DOUBLE •

    $default  reduce using rule 106 (type_specifier)


State 20

  104 type_specifier: LONG •

    $default  reduce using rule 104 (type_specifier)


State 21

   99 storage_class_specifier: REGISTER •

    $default  reduce using rule 99 (storage_class_specifier)


State 22

  203 external_declaration: declaration •

    $default  reduce using rule 203 (external_declaration)


State 23

   82 declaration: declaration_specifiers • init_declarator_list SEMICOLON
   83            | declaration_specifiers • SEMICOLON
  204 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  206 function_prototype: declaration_specifiers • declarator

    PARANTHESIS_OPEN  shift, and go to state 35
    ASTERISK          shift, and go to state 36
    SEMICOLON         shift, and go to state 37
    IDENTIFIER        shift, and go to state 38

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42
    pointer               go to state 43


State 24

   84 declaration_specifiers: storage_class_specifier • declaration_specifiers
   85                       | storage_class_specifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   86 declaration_specifiers: type_specifier • declaration_specifiers
   87                       | type_specifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  112 type_specifier: enum_specifier •

    $default  reduce using rule 112 (type_specifier)


State 27

   88 declaration_specifiers: type_qualifier • declaration_specifiers
   89                       | type_qualifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 89 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   90 declaration_specifiers: function_specifier • declaration_specifiers
   91                       | function_specifier •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit • $end
  201 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 48
    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31
    function_prototype       go to state 32


State 30

  200 translation_unit: external_declaration •

    $default  reduce using rule 200 (translation_unit)


State 31

  202 external_declaration: function_definition •

    $default  reduce using rule 202 (external_declaration)


State 32

  205 function_definition: function_prototype • compound_statement

    CURLY_BRACKET_OPEN  shift, and go to state 50

    compound_statement  go to state 51


State 33

  119 enum_specifier: ENUM IDENTIFIER •
  120 identifier_opt: IDENTIFIER •

    CURLY_BRACKET_OPEN  reduce using rule 120 (identifier_opt)
    $default            reduce using rule 119 (enum_specifier)


State 34

  117 enum_specifier: ENUM identifier_opt • CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  118               | ENUM identifier_opt • CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 52


State 35

  133 direct_declarator: PARANTHESIS_OPEN • declarator PARANTHESIS_CLOSE

    PARANTHESIS_OPEN  shift, and go to state 35
    ASTERISK          shift, and go to state 36
    IDENTIFIER        shift, and go to state 38

    declarator         go to state 53
    direct_declarator  go to state 42
    pointer            go to state 43


State 36

  145 pointer: ASTERISK • type_qualifier_list
  146        | ASTERISK •
  147        | ASTERISK • type_qualifier_list pointer
  148        | ASTERISK • pointer

    RESTRICT  shift, and go to state 3
    VOLATILE  shift, and go to state 9
    CONST     shift, and go to state 12
    ASTERISK  shift, and go to state 36

    $default  reduce using rule 146 (pointer)

    type_qualifier       go to state 54
    pointer              go to state 55
    type_qualifier_list  go to state 56


State 37

   83 declaration: declaration_specifiers SEMICOLON •

    $default  reduce using rule 83 (declaration)


State 38

  132 direct_declarator: IDENTIFIER •

    $default  reduce using rule 132 (direct_declarator)


State 39

   82 declaration: declaration_specifiers init_declarator_list • SEMICOLON
   92 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 57
    COMMA      shift, and go to state 58


State 40

   93 init_declarator_list: init_declarator •

    $default  reduce using rule 93 (init_declarator_list)


State 41

   94 init_declarator: declarator •
   95                | declarator • ASSIGN_t initializer
  204 function_definition: declaration_specifiers declarator • declaration_list compound_statement
  206 function_prototype: declaration_specifiers declarator •

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID_t     shift, and go to state 6
    FLOAT_t    shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR_t     shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL_t     shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT_t      shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21
    ASSIGN_t   shift, and go to state 59

    CURLY_BRACKET_OPEN  reduce using rule 206 (function_prototype)
    $default            reduce using rule 94 (init_declarator)

    declaration              go to state 60
    declaration_specifiers   go to state 61
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list         go to state 62


State 42
